@@ -194,12 +194,127 @@ public class Demo1_5 {
 ### 2.4.3堆内存诊断
 
 1. jps 工具
-  查看当前系统中有哪些 java 进程
+    查看当前系统中有哪些 java 进程
 2. jmap 工具
-  查看堆内存占用情况 jmap - heap 进程id (只能查看某一时刻)
+    查看堆内存占用情况 jmap - heap 进程id (只能查看某一时刻)
 3. jconsole 工具
-  图形界面的，多功能的监测工具，可以连续监测
+    图形界面的，多功能的监测工具，可以连续监测
 
 ## 2.5方法区
 
 ![image-20201022202044845](/img/image-20201022202044845.png)
+
+### 2.5.1定义
+
+Java虚拟机具有一个在所有Java虚拟机线程之间共享的*方法区域*。该方法区域类似于常规语言的编译代码的存储区域，或者类似于操作系统过程中的“文本”段。它存储每个类的结构，例如运行时常量池，字段和方法数据，以及方法和构造函数的代码，包括用于类和实例初始化以及接口初始化的特殊方法（[2.9节](https://docs.oracle.com/javase/specs/jvms/se8/html/jvms-2.html#jvms-2.9)）。
+
+方法区域是在虚拟机启动时创建的。尽管方法区域在逻辑上是堆的一部分，但是简单的实现可以选择不进行垃圾回收或压缩。该规范没有规定方法区域的位置或用于管理已编译代码的策略。方法区域可以是固定大小的，或者可以根据计算的需要进行扩展，如果不需要更大的方法区域，则可以缩小。方法区域的内存不必是连续的。
+
+[虚拟机规范](https://docs.oracle.com/javase/specs/jvms/se8/html/index.html)https://docs.oracle.com/javase/specs/jvms/se8/html/index.html
+
+
+
+### 2.5.2组成
+
+<img src="/img/image-20201023000621425.png" alt="image-20201023000621425" style="zoom:80%;" />
+
+
+
+### 2.5.3方法区内存溢出
+
+
+
+溢出代码demo
+
+jvm1.8  1.8 之后会导致元空间内存溢出
+
+```java
+/**
+ * 演示元空间内存溢出 java.lang.OutOfMemoryError: Metaspace
+ * -XX:MaxMetaspaceSize=8m
+ */
+public class Demo1_8 extends ClassLoader { // 可以用来加载类的二进制字节码
+    public static void main(String[] args) {
+        int j = 0;
+        try {
+            Demo1_8 test = new Demo1_8();
+            for (int i = 0; i < 10000; i++, j++) {
+                // ClassWriter 作用是生成类的二进制字节码
+                ClassWriter cw = new ClassWriter(0);
+                // 版本号， public， 类名, 包名, 父类， 接口
+                cw.visit(Opcodes.V1_8, Opcodes.ACC_PUBLIC, "Class" + i, null, "java/lang/Object", null);
+                // 返回 byte[]
+                byte[] code = cw.toByteArray();
+                // 执行了类的加载
+                test.defineClass("Class" + i, code, 0, code.length); // Class 对象
+            }
+        } finally {
+            System.out.println(j);
+        }
+    }
+}
+
+```
+
+jvm1.6  1.8 以前会导致永久代内存溢出
+
+```java
+/**
+ * 演示永久代内存溢出  java.lang.OutOfMemoryError: PermGen space
+ * -XX:MaxPermSize=8m
+ */
+public class Demo1_8 extends ClassLoader {
+    public static void main(String[] args) {
+        int j = 0;
+        try {
+            Demo1_8 test = new Demo1_8();
+            for (int i = 0; i < 20000; i++, j++) {
+                ClassWriter cw = new ClassWriter(0);
+                cw.visit(Opcodes.V1_6, Opcodes.ACC_PUBLIC, "Class" + i, null, "java/lang/Object", null);
+                byte[] code = cw.toByteArray();
+                test.defineClass("Class" + i, code, 0, code.length);
+            }
+        } finally {
+            System.out.println(j);
+        }
+    }
+}
+
+```
+
+
+
+场景
+mybatis  spring  等框架采用可能会导致内存溢出(cglib)
+
+### 2.5.4运行时常量池
+
+- 常量池，就是一张表，虚拟机指令根据这张常量表找到要执行的类名、方法名、参数类型、字面量
+  等信息
+- 运行时常量池，常量池是 *.class 文件中的，当该类被加载，它的常量池信息就会放入运行时常量
+  池，并把里面的符号地址变为真实地址
+
+
+
+### 2.5.5 StringTable
+
+几道面试题
+
+```java
+String s1 = "a";
+String s2 = "b";
+String s3 = "a" + "b";
+String s4 = s1 + s2;
+String s5 = "ab";
+String s6 = s4.intern();
+// 问
+System.out.println(s3 == s4);
+System.out.println(s3 == s5);
+System.out.println(s3 == s6);
+String x2 = new String("c") + new String("d");
+String x1 = "cd";
+x2.intern();
+// 问，如果调换了【最后两行代码】的位置呢，如果是jdk1.6呢
+System.out.println(x1 == x2);
+```
+
